Cambiados los iconos y la descripcion de la pagina

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="With more than 27 years of experience, Color Copy is today a leading brand in the field of graphics and advertising. We have worked on large projects with Tarjeta Naranja, Naranja X and the Municipality of Córdoba. We have also created the image of small businesses and local ventures, always guaranteeing excellent communication and work tailored to each client." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
